--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 .App {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
+  max-width: 100%;
   height: 100vh;
+  display: flex;
+  justify-content: center;
   overflow: hidden;
   background: linear-gradient(102.7deg, #d1d0ff, #e4bbff, #ffdae3, #ffddfc);
   font-family: "Poppins", sans-serif;
